--- a/package.json
+++ b/package.json
@@ -10,24 +10,28 @@
     "test:e2e": "vue-cli-service test:e2e"
   },
   "dependencies": {
-    "register-service-worker": "^1.0.0",
-    "socket.io-client": "^2.1.1",
-    "vue": "^2.5.16",
-    "vue-router": "^3.0.1",
+    "quasar-extras": "^2.0.9",
+    "quasar-framework": "^0.17.18",
+    "register-service-worker": "^1.5.2",
+    "vue": "^2.5.21",
+    "vue-router": "^3.0.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.0-rc.10",
-    "@vue/cli-plugin-e2e-cypress": "^3.0.0-rc.10",
-    "@vue/cli-plugin-eslint": "^3.0.0-rc.10",
-    "@vue/cli-plugin-pwa": "^3.0.0-rc.10",
-    "@vue/cli-plugin-unit-mocha": "^3.0.0-rc.10",
-    "@vue/cli-service": "^3.0.0-rc.10",
-    "@vue/eslint-config-prettier": "^3.0.0-rc.10",
-    "@vue/test-utils": "^1.0.0-beta.20",
-    "chai": "^4.1.2",
-    "node-sass": "^4.9.0",
+    "@vue/cli-plugin-babel": "^3.2.2",
+    "@vue/cli-plugin-e2e-cypress": "^3.2.3",
+    "@vue/cli-plugin-eslint": "^3.2.2",
+    "@vue/cli-plugin-pwa": "^3.2.2",
+    "@vue/cli-plugin-unit-mocha": "^3.2.2",
+    "@vue/cli-service": "^3.2.3",
+    "@vue/eslint-config-prettier": "^3.0.5",
+    "@vue/test-utils": "^1.0.0-beta.28",
+    "chai": "^4.2.0",
+    "node-sass": "^4.11.0",
     "sass-loader": "^7.0.1",
-    "vue-template-compiler": "^2.5.16"
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
+    "vue-cli-plugin-quasar": "^0.17.1",
+    "vue-template-compiler": "^2.5.21"
   }
 }
