--- a/package.json
+++ b/package.json
@@ -10,30 +10,30 @@
     "test:e2e": "vue-cli-service test:e2e"
   },
   "dependencies": {
-    "@quasar/extras": "^1.1.0",
-    "quasar": "^1.0.0-beta.11",
+    "@quasar/extras": "^1.3.2",
+    "quasar": "^1.1.7",
     "quasar-extras": "^2.0.9",
     "quasar-framework": "^0.17.20",
     "register-service-worker": "^1.6.2",
-    "vue": "^2.6.9",
-    "vue-router": "^3.0.2",
-    "vuex": "^3.1.0"
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.5.1",
-    "@vue/cli-plugin-e2e-cypress": "^3.5.1",
-    "@vue/cli-plugin-eslint": "^3.5.1",
-    "@vue/cli-plugin-pwa": "^3.5.1",
-    "@vue/cli-plugin-unit-mocha": "^3.5.1",
-    "@vue/cli-service": "^3.5.1",
+    "@vue/cli-plugin-babel": "^3.11.0",
+    "@vue/cli-plugin-e2e-cypress": "^3.11.0",
+    "@vue/cli-plugin-eslint": "^3.11.0",
+    "@vue/cli-plugin-pwa": "^3.11.0",
+    "@vue/cli-plugin-unit-mocha": "^3.11.0",
+    "@vue/cli-service": "^3.11.0",
     "@vue/eslint-config-prettier": "^3.0.5",
     "@vue/test-utils": "^1.0.0-beta.29",
     "chai": "^4.2.0",
-    "node-sass": "^4.11.0",
-    "sass-loader": "^7.0.1",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
-    "vue-cli-plugin-quasar": "^0.17.1",
-    "vue-template-compiler": "^2.6.9"
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.0",
+    "stylus": "^0.54.7",
+    "stylus-loader": "^3.0.2",
+    "vue-cli-plugin-quasar": "^1.0.0",
+    "vue-template-compiler": "^2.6.10"
   }
 }
